// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GGGApi serialization matches snapshot Journeyman's Platinum Kris 1`] = `
Object {
  "category": undefined,
  "corrupted": false,
  "elder": false,
  "frameType": 1,
  "identified": true,
  "mirrored": true,
  "name": undefined,
  "properties": undefined,
  "requirements": Array [
    Object {
      "displayMode": 0,
      "name": "Stufe",
      "values": Array [
        Array [
          "64",
          0,
        ],
      ],
    },
    Object {
      "displayMode": 1,
      "name": "Ges",
      "values": Array [
        Array [
          "76",
          0,
        ],
      ],
    },
    Object {
      "displayMode": 1,
      "name": "Int",
      "values": Array [
        Array [
          "149",
          0,
        ],
      ],
    },
  ],
  "shaper": false,
  "typeLine": "Bürgerlicher Platinkris",
}
`;

exports[`GGGApi serialization matches snapshot Random Name Hubris Circlet 1`] = `
Object {
  "category": undefined,
  "corrupted": true,
  "elder": false,
  "frameType": 2,
  "identified": true,
  "mirrored": false,
  "name": "Random Name",
  "properties": undefined,
  "requirements": Array [
    Object {
      "displayMode": 0,
      "name": "Stufe",
      "values": Array [
        Array [
          "69",
          0,
        ],
      ],
    },
    Object {
      "displayMode": 1,
      "name": "Int",
      "values": Array [
        Array [
          "126",
          1,
        ],
      ],
    },
  ],
  "shaper": true,
  "typeLine": "Hybris-Diadem",
}
`;
